gitops/cluster-config/gateway/avelin-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: avelin-gateway
  namespace: infra
  annotations:
    networking.gke.io/gateway-class: "gke-l7-global-external-managed"
    networking.gke.io/certmap: "avelin-map"
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
    - type: NamedAddress
      value: avelin-ip
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
